k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: django-ingress
  namespace: devsu-demo
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - host: devsu-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 80
